THIS ONE WORKSgit add .git add . git push

--- a/_layouts/keywords_item.html
+++ b/_layouts/keywords_item.html
@@ -3,17 +3,17 @@ layout: generic_collection_item
 image_viewer: 'openseadragon'
 pagination: true
 meta:
-  - label: 'Artist'
-    value: page.artist
-  - label: 'Type'
-    value: page.object_type
-  - label: 'Location'
-    value: page.location
-  - label: 'Current Location'
-    value: page.current_location
   - label: 'Date'
-    value: page._date
-  - label: 'Source'
-    value: page.source
+    value: page.filing_date
+  - label: 'Origin'
+    value: page.doc_origin
+  - label: 'Language'
+    value: page.language
+  - label: 'Archive'
+    value: page.archive
+  - label: 'Keywords'
+    value: page.keywords
+  - label: 'Transcription and Translation'
+    value: page.google_doc_prototype
     type:  link
 ---
