will this work for text

--- a/_layouts/keywords_item.html
+++ b/_layouts/keywords_item.html
@@ -13,7 +13,11 @@ meta:
     value: page.archive
   - label: 'Keywords'
     value: page.keywords
-  - label: 'Transcription and Translation'
+  - label: 'Transcription and Translation on Google Docs'
     value: page.google_doc_prototype
     type:  link
+  
+body:
+  - label: 'Transcription and Translation'
+    value: <page class="text"></page>
 ---
