keywords color palette

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -33,18 +33,18 @@ sitemap: false
 /* text */
 
 $body-font: "Open Sans Regular", "Verdana", "sans-serif";
-$heading-font: "Open Sans Light", "Verdana", "sans-serif";
+$heading-font: "Open Sans Light", "Verdana", "sans-serif", "bold";
 
 /* Colors */
 
-$dark-background: #440027;
-$light-text: #d49a6a;
-$light-link: #ffd1aa;
-$light-link-hover: #fff;
-$medium-background: #801515;
-$light-background: #f7e4ef;
-$dark-text: #444444;
-$code: #3c1553;
+$dark-background: #005442;
+$light-text: #deb76a;
+$light-link: #f1e2d0;
+$light-link-hover: #bae5ce;
+$medium-background: #83406f;
+$light-background: #f5d877;
+$dark-text: #000000;
+$code: #000000;
 $muted-text: #777777;
 
 /* Image Heights */
