update for chenise

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,7 +5,7 @@ sitemap: false
 /* open-sans-300 - latin */
 @font-face {
   font-family: "Open Sans Light";
-  font-style: normal;
+  font-style: bold;
   font-weight: 300;
   src: url('{{ "/assets/fonts/OpenSans/open-sans-v18-latin-300.eot" | absolute_url }}'); /* IE9 Compat Modes */
   src: local(""),
