--- a/_layouts/keywords_item.html
+++ b/_layouts/keywords_item.html
@@ -18,13 +18,12 @@ meta:
     type:  link
 ---
 
-<hr>
 <!-- TRANSCRIPTIONS --> 
 
 <div class='main container'>
   <div>
 
-    {% capture excerpt %}{% include _includes/excerpts/{{ page.pid }}.md %}{% endcapture %}  
+    {% capture excerpt %}{% include excerpts/{{ page.pid }}.md %}{% endcapture %}  
 
       {{ excerpt | markdownify }}
 
