--- a/_layouts/keywords_item.html
+++ b/_layouts/keywords_item.html
@@ -20,4 +20,14 @@ meta:
 
 <!-- TRANSCRIPTIONS --> 
 
+<div class='main container'>
+  <div>
+
+    {% capture excerpt %}{% include excerpts/{{ page.pid }}.md %}{% endcapture %}  
+
+      {{ excerpt | markdownify }}
+
+  </div>
+</div>
+
 
