--- a/_layouts/team_page.html
+++ b/_layouts/team_page.html
@@ -9,17 +9,15 @@ layout: page
 
   <div class="row my-4">
     {% for person in site.team %}
-      <div class="row">
-        <h3 class="row">{{ person.name }}</h3>
-        <div class="row">
-          <div class="col-sm-4">
-            {% if person.image %}
-              <img class="w-100" src='{{ person.image | absolute_url}}' alt='Image of {{ person.name }}' />
-            {% endif %}
-          </div>
-          <div class="col-sm">
-            {{ person.content }}
-          </div>
+      <h3 class="row w-100">{{ person.name }}</h3>
+      <div class="row w-100">
+        <div class="col-sm-4">
+          {% if person.image %}
+            <img class="w-100" src='{{ person.image | absolute_url}}' alt='Image of {{ person.name }}' />
+          {% endif %}
+        </div>
+        <div class="col-sm">
+          {{ person.content }}
         </div>
       </div>
     {% endfor %}
