--- a/_layouts/facet_page_layout_date.html
+++ b/_layouts/facet_page_layout_date.html
@@ -8,12 +8,12 @@ value:
     <h1>By Date</h1>
   </div>
   <div class="row">
-    <p>Paragraph about periodization and different empires</p>
+    <p>Paragraph about periodization, French and Spanish periods</p>
   </div>
   
   <div class="row">
     <ul class="w-100">
-      {% assign dates = _keywords | where_exp: "page", "page.url contains 'pages/docs_by/keywords/'" %}
+      {% assign date = site.keywords[page.filing_date] | where_exp: "page", "page.url contains 'pages/docs_by/keywords/'" %}
       {% for page in keywords %}
         <li class="">
           {% comment %}
