--- a/_includes/search_box.html
+++ b/_includes/search_box.html
@@ -2,6 +2,8 @@
 {% assign key = include.search | default: 'main' %}
 {% assign config = site.search[key] %}
 {% assign index = config.index | absolute_url %}
+{% assign subtitle = include.subtitle | split: ',' | uniq %}
+
 {%- capture fields -%}
   {%- for collection in config.collections -%}
     {%- for field in collection[1].fields -%}
@@ -24,8 +26,9 @@
   var fields    = {{ fields | jsonify }};
   var indexFile = "{{ index }}";
   var url       = "{{ '/' | absolute_url }}";
-  console.log(url);
+  var subtitles  = {{ subtitle | jsonify }};
+
   $(document).ready(function() {
-    startSearchUI(fields, indexFile, url);
+    startSearchUI(fields, indexFile, url, subtitles);
   });
 </script>
