Restrict transcription element width

--- a/_layouts/generic_collection_item.html
+++ b/_layouts/generic_collection_item.html
@@ -47,7 +47,7 @@ layout: default
         </div>
   {% endif %}
 
-  <div class="card-body item-metadata">
+  <div class="card-body item-metadata w-100">
 
 <!-- The block below controls the item metadata table -->
 
