Pin height of gallery cards

--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -129,7 +129,7 @@
 
           <div class="gallery-item-facets {{  newClasses | join: ' ' }}  col-xl-{{min_column_width}} p-1">
             <a href="{{ item.url | relative_url }}">
-              <div class="card thumbnail-card">
+              <div class="card thumbnail-card h-100">
                 <!-- Item: {{ item.pid }} -->
                 <img
                   class="d-block card-img-top gallery-thumb w-100 mh-100"
