Fix missing thumbnails in navigation strip in OpenSeadragon (backport change from Wax)

--- a/_includes/osd_iiif_image_viewer.html
+++ b/_includes/osd_iiif_image_viewer.html
@@ -9,14 +9,17 @@ $ mogrify -format png +level-colors "#882D60", *.png
 -->
 
 <div id="osd" class="image-viewer"></div>
-<script async defer src="{{ '/assets/js/openseadragon/openseadragon.min.js' | absolute_url }}"></script>
+<script defer src="{{ '/assets/js/openseadragon/openseadragon.min.js' | absolute_url }}"></script>
 <script>
   $(document).ready(function () {
     var manifestUrl = "{{ include.manifest | absolute_url }}";
     $.getJSON(manifestUrl, function(data) {
       var tileSources = [];
       $.each(data.sequences[0].canvases, function(k, val) {
-        tileSources.push(val.images[0].resource.service['@id'] + '/info.json');
+        tileSources.push({
+          tileSource: val.images[0].resource.service['@id'] + '/info.json',
+          referenceStripThumbnailUrl: val.thumbnail
+        });
       });
       OpenSeadragon({
         id: "osd",
