add lhc scans to item display

--- a/_layouts/keywords_item.html
+++ b/_layouts/keywords_item.html
@@ -13,9 +13,13 @@ meta:
     value: page.archive
   - label: 'Keywords'
     value: page.keywords
+  - label: LHC Scans
+    value: page.lhc_scans
   - label: 'Transcription and Translation'
     value: page.google_doc_prototype
-    type:  link
+    type: link
+  - label: 'Downloadable File'
+    type: link
 ---
 
 <!-- TRANSCRIPTIONS --> 
