attempt to add button for PDF download

--- a/_layouts/keywords_item.html
+++ b/_layouts/keywords_item.html
@@ -19,6 +19,9 @@ meta:
   - label: 'Transcription and Translation'
     value: page.google_doc_prototype
     type: link
-  - label: 'Downloadable File'
-    type: link
----
+    ---
+
+    {% comment %} Render a button for the PDF file {% endcomment %}
+    {% if page.downloadable_file %}
+      <button onclick="window.location.href='{{ page.pdf }}'">Download PDF</button>
+    {% endif %}
