--- a/_layouts/generic_collection_item.html
+++ b/_layouts/generic_collection_item.html
@@ -64,8 +64,16 @@ layout: default
     </div>
 
     <div>
-      {% capture excerpt %}{% include excerpts/{{ page.pid }}.md %}{% endcapture %}
-      {{ excerpt | markdownify }}
+      {%- comment -%}
+        Unfortunate chaining here, since it doesn't seem like "where_exp" can take variable values in comparisons
+        First get documents for our collection, filter by path, finally filter by filename
+      {%- endcomment -%}
+      {% assign excerpt = site.documents | where: 'collection', page.collection | where_exp: 'doc', "doc.path contains '/excerpts/'" | where: 'basename', page.pid | first %}
+      {% if excerpt %}
+        {% capture excerpt_file %}excerpts/{{ page.pid }}.md{% endcapture %}
+        {% capture data %}{% include_relative {{ excerpt_file }} %}{% endcapture %}
+        {{ data | markdownify }}  
+      {% endif %}
     </div>
   </div>
 </div>
