update csv with citations, check unicode, add update d0286 markdown file

--- a/_layouts/keywords_item.html
+++ b/_layouts/keywords_item.html
@@ -19,6 +19,10 @@ meta:
   - label: 'Transcription and Translation'
     value: page.google_doc_prototype
     type: link
+  - label: 'Publication Date'
+    value: publication_date
+  - Suggested Citation
+    value: citation
 ---
 
     {% comment %} Render a button for the PDF file {% endcomment %}
