comment out new metadata headers (for now)

--- a/_layouts/keywords_item.html
+++ b/_layouts/keywords_item.html
@@ -19,10 +19,12 @@ meta:
   - label: 'Transcription and Translation'
     value: page.google_doc_prototype
     type: link
+{% comment %} 
   - label: 'Publication Date'
-    value: publication_date
-  - Suggested Citation
-    value: citation
+    value: page.publication_date
+  - label: 'Suggested Citation'
+    value: page.citation 
+{% endcomment %}
 ---
 
     {% comment %} Render a button for the PDF file {% endcomment %}
