--- a/_layouts/facet_page_layout.html
+++ b/_layouts/facet_page_layout.html
@@ -63,7 +63,13 @@ Generate the list of nav links to all of our Keywords
     {% endif %}
 
     {% if page.Keyword %}
-      {% include gallery.html collection='keywords' field='keywords' value=page.Keyword num_column=3 %}
+      {% include gallery.html
+          collection='keywords'
+          field='keywords'
+          value=page.Keyword
+          num_column=3
+          display_fields="lhc_source,lhc_doc_origin,lhc_filing_date"
+      %}
     {% endif %}
   </section>
 </div>
