--- a/_layouts/keywords_item.html
+++ b/_layouts/keywords_item.html
@@ -13,6 +13,9 @@ meta:
     value: page.archive
   - label: 'Keywords'
     value: page.keywords
+    type: internal-link
+    collection: keywords_descriptions
+    targetField: Keyword
   - label: LHC Scans
     value: page.lhc_scans
     type: link
@@ -22,7 +25,15 @@ meta:
   - label: 'Publication Date'
     value: page.publication_date
   - label: 'Suggested Citation'
-    value: page.citation 
+    value: page.citation
+  - label: 'Abstract'
+    value: page.abstract
+  - label: 'Related Records'
+    value: page.related_record_ids
+    type: internal-link
+    collection: keywords
+    targetField: pid
+    delimiter: ','
 ---
 
     {% comment %} Render a button for the PDF file {% endcomment %}
