Tweaking link colors, people and keywords lists

--- a/_layouts/people_page_layout.html
+++ b/_layouts/people_page_layout.html
@@ -12,7 +12,7 @@ layout: default
 </section>
 {%- endif -%}
 
-<section>
+<section id="people-of-keywords">
     <div class="list-group-flush">
         {% for person in site["people"] %}
             <a href="{{ person.url }}" class="list-group-item">
