--- a/_includes/keywords_metadata.html
+++ b/_includes/keywords_metadata.html
@@ -28,6 +28,7 @@
               target_field=item.targetField
               collection=item.collection
               delimiter=item.delimiter
+              display_field=item.displayField
           %}
         {%- endcapture -%}
       {% endif %}
