--- a/_layouts/keywords_item.html
+++ b/_layouts/keywords_item.html
@@ -33,7 +33,8 @@ meta:
     type: internal-link
     collection: keywords
     targetField: pid
-    delimiter: ','
+    delimiter: ","
+    displayField: "label"
 ---
 
     {% comment %} Render a button for the PDF file {% endcomment %}
