--- a/_layouts/keywords_item.html
+++ b/_layouts/keywords_item.html
@@ -19,9 +19,9 @@ meta:
   - label: LHC Scans
     value: page.lhc_scans
     type: link
-  - label: 'Transcription and Translation'
-    value: page.google_doc_prototype
-    type: link
+  - label: 'Transcription and Translation PDF (for Download)'
+    value: page.pdf_location
+    type: internal-link
   - label: 'Publication Date'
     value: page.publication_date
   - label: 'Suggested Citation'
