try link instead of internal link

--- a/_layouts/keywords_item.html
+++ b/_layouts/keywords_item.html
@@ -21,7 +21,7 @@ meta:
     type: link
   - label: 'Transcription and Translation PDF (for Download)'
     value: page.pdf_location
-    type: internal-link
+    type: link
   - label: 'Publication Date'
     value: page.publication_date
   - label: 'Suggested Citation'
