change .page to .item for _item?

--- a/_layouts/keywords_item.html
+++ b/_layouts/keywords_item.html
@@ -4,7 +4,7 @@ image_viewer: 'openseadragon'
 pagination: true
 meta:
   - label: 'Date'
-    value: page.filing_date
+    value: item.filing_date
   - label: 'Origin'
     value: page.doc_origin
   - label: 'Language'
