filing date and origin

--- a/_layouts/keywords_item.html
+++ b/_layouts/keywords_item.html
@@ -4,9 +4,9 @@ image_viewer: 'openseadragon'
 pagination: true
 meta:
   - label: 'Date'
-    value: item.filing_date
+    value: filing_date
   - label: 'Origin'
-    value: page.doc_origin
+    value: doc_origin
   - label: 'Language'
     value: page.language
   - label: 'Archive'
