Change gallery image sizes

--- a/_sass/keywords.scss
+++ b/_sass/keywords.scss
@@ -74,3 +74,10 @@ footer {
         width: 100px;
     }
 }
+
+// !importants in order to override Bootstrap classes
+.gallery-thumb {
+    height: initial;
+    max-height: 250px !important;
+    max-width: 250px !important;
+}
