--- a/_sass/keywords.scss
+++ b/_sass/keywords.scss
@@ -45,3 +45,11 @@ main {
         }
     }
 }
+
+#team-page {
+    .card {
+        .team-member-title {
+            font-size: 1.15rem;
+        }
+    }
+}
