--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,9 @@
       <div class="col-lg-6">
         <p>Keywords for Black Louisiana</p>
       </div>
-      <div class="col-lg-6">      
-        <span><small>Built with </small><a href="https://minicomp.github.io/wax/" target="_blank">Wax</a><small> and </small><a href="https://jekyllrb.com/" target="_blank">Jekyll</a><small>. Available on </small><a href="https://github.com/minicomp/wax-facets/">GitHub</a></span>      
+      <div class="col-lg-6"> 
+        <img src="assets/figures/nhprc-logo.jpg" alt="NHPRC logo" style="width:100px;height:auto;">     
+        <!-- <span><small>Built with </small><a href="https://minicomp.github.io/wax/" target="_blank">Wax</a><small> and </small><a href="https://jekyllrb.com/" target="_blank">Jekyll</a><small>. Available on </small><a href="https://github.com/minicomp/wax-facets/">GitHub</a></span> -->     
       </div>
     </div>
   </div>
