add logo to header

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,16 +3,16 @@
     <div class="row">
       <div class="col-lg-6 d-flex flex-column align-items-center">
         <p>Keywords for Black Louisiana</p>
-        <p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/">
+        <p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/" style="font-size: 0.8em;">
           <a property="dct:title" rel="cc:attributionURL" href="http://docs.k4bl.org">Keywords for Black Louisiana Document Site</a>
           by <a rel="cc:attributionURL dct:creator" property="cc:attributionName" href="http://keywordsforblacklouisiana.org">K4BL Collective</a>
           is licensed under
           <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">
             Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International
-            <img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" alt="">
-            <img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" alt="">
-            <img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/nc.svg?ref=chooser-v1" alt="">
-            <img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/sa.svg?ref=chooser-v1" alt="">
+            <img style="height:16px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" alt="">
+            <img style="height:16px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" alt="">
+            <img style="height:16px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/nc.svg?ref=chooser-v1" alt="">
+            <img style="height:16px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/sa.svg?ref=chooser-v1" alt="">
           </a>
         </p>
       </div>
@@ -22,17 +22,3 @@
     </div>
   </div>
 </footer>
-
-<!-- <footer class="banner text-center">
-  <div class="container p-2">
-    <div class="row">
-      <div class="col-lg-6">
-        <p>Keywords for Black Louisiana</p>
-      </div>
-      <div class="col-lg-6"> 
-        <img src="assets/figures/nhprc-logo.jpg" alt="NHPRC logo" style="width:100px;height:auto;"> -->    
-        <!-- <span><small>Built with </small><a href="https://minicomp.github.io/wax/" target="_blank">Wax</a><small> and </small><a href="https://jekyllrb.com/" target="_blank">Jekyll</a><small>. Available on </small><a href="https://github.com/minicomp/wax-facets/">GitHub</a></span>     
-      </div>
-    </div>
-  </div>
-</footer> -->
