--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -61,13 +61,19 @@ $max-width: 100%;
 
 /* footer */
 
-.footer .container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 100%;
-}
+.footer {
+  background-color: $footer-bg-color;
+  color: $footer-text-color;
+  padding: 20px 0;
 
-.footer p {
-  margin: 0;
+  .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+  }
+
+  p {
+    margin: 0;
+  }
 }
