--- a/_includes/keywords_metadata.html
+++ b/_includes/keywords_metadata.html
@@ -14,6 +14,12 @@
           {%- capture value -%}
             <a href="{{ value | absolute_url }}" target="_blank" rel="noreferrer">{{ value | absolute_url }}</a>
           {%- endcapture -%}
+        {% elsif key == 'pdf_location' %}
+          {%- capture value -%}
+            <a class="btn btn-info text-white px-2 py-1" href="{{ value | absolute_url }}" target="_blank" rel="noreferrer">
+              Download PDF
+            </a>
+          {%- endcapture -%}
         {% else %}
           {%- capture value -%}
             <a href="{{ value | absolute_url }}" target="_blank" rel="noreferrer">
