Fix image links and styles in header, footer

--- a/_sass/keywords.scss
+++ b/_sass/keywords.scss
@@ -53,3 +53,13 @@ main {
         }
     }
 }
+
+footer {
+    height: initial;
+
+    #cc-license-logo img {
+        height: 16px !important;
+        margin-left: 3px;
+        vertical-align: text-bottom;
+    }
+}
