--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,24 +1,27 @@
-<footer class="banner text-center">
+<footer class="banner">
   <div class="container p-2">
-    <div class="row">
-      <div class="col-lg-6 d-flex flex-column align-items-center">
+    <div class="row align-items-center">
+      <div class="col-lg">
         <p>Keywords for Black Louisiana</p>
         <p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/" style="font-size: 0.8em;">
           <a property="dct:title" rel="cc:attributionURL" href="http://docs.k4bl.org">Keywords for Black Louisiana Document Site</a>
           by <a rel="cc:attributionURL dct:creator" property="cc:attributionName" href="http://keywordsforblacklouisiana.org">K4BL Collective</a>
           is licensed under
-          <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">
+          <a id="cc-license-logo" href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">
             Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International
-            <img style="height:16px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" alt="">
-            <img style="height:16px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" alt="">
-            <img style="height:16px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/nc.svg?ref=chooser-v1" alt="">
-            <img style="height:16px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/sa.svg?ref=chooser-v1" alt="">
+            <img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" alt="">
+            <img src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" alt="">
+            <img src="https://mirrors.creativecommons.org/presskit/icons/nc.svg?ref=chooser-v1" alt="">
+            <img src="https://mirrors.creativecommons.org/presskit/icons/sa.svg?ref=chooser-v1" alt="">
           </a>
         </p>
       </div>
-      <div class="col-lg-6 d-flex justify-content-center align-items-center">
-        <img src="assets/figures/nhprc-logo.jpg" alt="NHPRC logo" style="width:100px;height:auto;">
+      <div class="col-lg-2 d-flex justify-content-center">
+        <img src="/assets/figures/nhprc-logo.jpg" alt="NHPRC logo" style="width:100px;height:auto;">
       </div>
     </div>
   </div>
 </footer>
+<style>
+
+</style>
