--- a/_layouts/keywords_item.html
+++ b/_layouts/keywords_item.html
@@ -10,7 +10,7 @@ meta:
   - label: 'Language'
     value: page.language
   - label: 'Archive'
-    value: page.archive
+    value: page.lhc_archive
   - label: 'Keywords'
     value: page.keywords
     type: internal-link
