--- a/_includes/search_box.html
+++ b/_includes/search_box.html
@@ -25,7 +25,7 @@
 <script type='text/javascript'>
   var fields    = {{ fields | jsonify }};
   var indexFile = "{{ index }}";
-  var url       = "{{ '/' | absolute_url }}";
+  var url       = "{{ site.url | absolute_url }}";
   var subtitles  = {{ subtitle | jsonify }};
 
   $(document).ready(function() {
