--- a/_layouts/keywords_item.html
+++ b/_layouts/keywords_item.html
@@ -19,7 +19,7 @@ meta:
   - label: LHC Scans
     value: page.lhc_scans
     type: link
-  - label: 'Transcription and Translation PDF'
+  - label: 'Side-by-Side Transcription and Translation'
     value: page.pdf_location
     type: link
   - label: 'Publication Date'
