Update glossary layout to allow top level page

--- a/_layouts/facet_page_layout.html
+++ b/_layouts/facet_page_layout.html
@@ -55,7 +55,7 @@ Generate the list of nav links to all of our Keywords
     </nav>
 
     {%- if content -%}
-      <div class="row">
+      <div class="">
         {{content}}
       </div>
     {%- endif -%}
