--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
 
   <!-- FAVICONS & APPS -->
-  <link rel="apple-touch-icon" sizes="57x57" href="{{ '/assets/logo/apple-icon-57x57.png' | relative_url}}"/>
+  <!-- <link rel="apple-touch-icon" sizes="57x57" href="{{ '/assets/logo/apple-icon-57x57.png' | relative_url}}"/>
   <link rel="apple-touch-icon" sizes="60x60" href="{{ '/assets/logo/apple-icon-60x60.png' | relative_url}}"/>
   <link rel="apple-touch-icon" sizes="72x72" href="{{ '/assets/logo/apple-icon-72x72.png' | relative_url}}"/>
   <link rel="apple-touch-icon" sizes="76x76" href="{{ '/assets/logo/apple-icon-76x76.png' | relative_url}}"/>
@@ -16,13 +16,13 @@
   <link rel="apple-touch-icon" sizes="152x152" href="{{ '/assets/logo/apple-icon-152x152.png' | relative_url}}"/>
   <link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/logo/apple-icon-180x180.png' | relative_url}}"/>
   <link rel="shortcut icon" type="image/png" sizes="192x192"  href="{{ '/assets/logo/android-icon-192x192.png' | relative_url}}"/>
-  <link rel="shortcut icon" type="image/png" sizes="32x32" href="{{ '/assets/logo/favicon-32x32.png' | relative_url}}"/>
-  <link rel="shortcut icon" type="image/png" sizes="96x96" href="{{ '/assets/logo/favicon-96x96.png' | relative_url}}"/>
-  <link rel="shortcut icon" type="image/png" sizes="16x16" href="{{ '/assets/logo/favicon-16x16.png' | relative_url}}"/>
   <link rel="manifest" href="{{ '/assets/logo/manifest.json' | relative_url}}"/>
   <meta name="msapplication-TileColor" content="#ffffff"/>
   <meta name="msapplication-TileImage" content="/assets/logo/ms-icon-144x144.png"/>
-  <meta name="theme-color" content="#ffffff"/>
+  <meta name="theme-color" content="#ffffff"/> -->
+  <link rel="shortcut icon" type="image/png" sizes="32x32" href="{{ '/assets/figures/favicon_32.png' | relative_url}}"/>
+  <link rel="shortcut icon" type="image/png" sizes="96x96" href="{{ '/assets/figures/favicon_96.png' | relative_url}}"/>
+  <link rel="shortcut icon" type="image/png" sizes="16x16" href="{{ '/assets/figures/favicon_16.png' | relative_url}}"/>
 
   <!-- SCRIPTS -->
   <script type='text/javascript' src='{{ "/assets/js/jquery-3.5.1.min.js" | absolute_url }}'></script>
