Add JHU library logo

--- a/_sass/keywords.scss
+++ b/_sass/keywords.scss
@@ -62,4 +62,11 @@ footer {
         margin-left: 3px;
         vertical-align: text-bottom;
     }
+
+    #jhu-sheridan-logo {
+        height: 124px;
+    }
+    #nhprc-logo {
+        width: 100px;
+    }
 }
