--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="banner">
   <div class="container p-2">
     <div class="row align-items-center">
-      <div class="col-lg">
+      <div class="col-lg-8">
         <p>Keywords for Black Louisiana</p>
         <p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/" style="font-size: 0.8em;">
           <a property="dct:title" rel="cc:attributionURL" href="http://docs.k4bl.org">Keywords for Black Louisiana Document Site</a>
@@ -16,8 +16,11 @@
           </a>
         </p>
       </div>
-      <div class="col-lg-2 d-flex justify-content-center">
-        <img src="/assets/figures/nhprc-logo.jpg" alt="NHPRC logo" style="width:100px;height:auto;">
+      <div class="col-lg d-flex justify-content-center">
+        <a class="" href="https://library.jhu.edu" target="_blank">
+          <img id="jhu-sheridan-logo" src="/assets/logo/libraries.logo.small.vertical.white.png" alt="Johns Hopkins University Libraries">
+        </a>
+        <img id="nhprc-logo" src="/assets/figures/nhprc-logo.jpg" alt="NHPRC logo">
       </div>
     </div>
   </div>
