Prevent multi-value facet values from repeating values

--- a/_layouts/facet_page_layout.html
+++ b/_layouts/facet_page_layout.html
@@ -70,6 +70,7 @@ Generate the list of nav links to all of our Keywords
           field='keywords'
           value=page.Keyword
           num_column=3
+          separator=','
           display_fields="lhc_source,lhc_doc_origin,lhc_filing_date"
       %}
     {% endif %}
