--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -1,5 +1,5 @@
 {% comment %}- ASSIGN SEPARATOR -{% endcomment%}
-{% assign separator = "|" %}
+{% assign separator = include.separator | default: "|" %}
 
 {% comment %}- SET NUMBER OF COLUMNS -{% endcomment%}
 
@@ -36,7 +36,7 @@
 
 {% if include.facet_by %}
   <form class="row" id="facets">
-    {% assign facet_list = include.facet_by | split: "|" %}
+    {% assign facet_list = include.facet_by | split: separator %}
     {% for facet in facet_list %}
       {% comment %}- MULTI-VALUE FACETS -{% endcomment%}
       {% if facet contains "*" %}
@@ -56,49 +56,70 @@
             {% capture temp_facet_values %}{{ temp_facet_values | append: option}}|{% endcapture %}
           {% endif %}
         {% endfor %}
-        {% assign facet_values = temp_facet_values | split: "|" | uniq | sort_natural %}
+        {% assign facet_values = temp_facet_values | split: separator | uniq | sort_natural %}
+      
       {% else %}
-        {% assign facet_values = collection | map: facet | compact | uniq | sort_natural %}
+
+        {% comment %}
+          We need to flatten the facets, as facets may be single or multi-valued
+        {% endcomment %}
+
+        {% assign original_options = collection | map: facet | compact | uniq | sort_natural %}
+
+        {% assign temp_facet_values = "" %}
+        {% for option in original_options %}
+          {% if option contains separator %}
+            {% assign split_values = {{option}} | split: separator %}
+            {% for split_value in split_values %}
+              {% assign stripped_value = split_value | strip %}
+              {% capture temp_facet_values %}{{ temp_facet_values | append: stripped_value }}{{ separator }}{% endcapture %}
+            {% endfor %}
+          {% else %}
+            {% capture temp_facet_values %}{{ temp_facet_values | append: option}}{{ separator }}{% endcapture %}
+          {% endif %}
+        {% endfor %}
+        
+        {% assign facet_values = temp_facet_values | split: separator | uniq | sort_natural %}
         {% assign facet_name = facet %}
       {% endif %}
         
-        <fieldset id="{{ facet_name | slugify }}-set" class="card m-1 facet-card">
-          <div class="facet-header card-header p-0">
-            <a
-              class="facet-bn"
-              data-toggle="collapse"
-              href="#{{ facet_name | slugify }}-collapse"
-              role="button"
-              aria-expanded="false"
-              aria-controls="{{ facet_name | slugify }}-collapse"
-            >
-              <legend class="px-4 py-2">{{ facet_name | replace: "_", " " }}<span
-                  aria-hidden="true"
-                  class="facets-chevron facets-chevron-bottom float-right ml-2"
-                ></span>
-              </legend>
-            </a>
-          </div>
-          <div class="collapse" id="{{ facet_name | slugify }}-collapse">
-            {% comment %}Create Card with facet values{% endcomment %}
-            <div class="card-body">
-              {% for value in facet_values %}
-              <div class="facet-item">
-                <label for="{{ value | slugify }}">
-                  <input 
-                    id="{{value | slugify}}"
-                    class="{{facet | slugify}}"
-                    type="checkbox"
-                    name="{{value}}"
-                    value="{{value}}"
-                  />
-                  <span class="mx-2">{{value}}</span>
-                </label>
-              </div>
-              {% endfor %}
+      <fieldset id="{{ facet_name | slugify }}-set" class="card m-1 facet-card">
+        <div class="facet-header card-header p-0">
+          <a
+            class="facet-bn"
+            data-toggle="collapse"
+            href="#{{ facet_name | slugify }}-collapse"
+            role="button"
+            aria-expanded="false"
+            aria-controls="{{ facet_name | slugify }}-collapse"
+          >
+            <legend class="px-4 py-2">{{ facet_name | replace: "_", " " }}<span
+                aria-hidden="true"
+                class="facets-chevron facets-chevron-bottom float-right ml-2"
+              ></span>
+            </legend>
+          </a>
+        </div>
+        <div class="collapse" id="{{ facet_name | slugify }}-collapse">
+          {% comment %}Create Card with facet values{% endcomment %}
+          <div class="card-body">
+            {% for value in facet_values %}
+            <div class="facet-item">
+              <label for="{{ value | slugify }}">
+                <input 
+                  id="{{value | slugify}}"
+                  class="{{facet | slugify}}"
+                  type="checkbox"
+                  name="{{value}}"
+                  value="{{value}}"
+                />
+                <span class="mx-2">{{value}}</span>
+              </label>
             </div>
+            {% endfor %}
           </div>
-        </fieldset>
+        </div>
+      </fieldset>
     {% endfor %}  
   </form>
 {% else %}
@@ -107,7 +128,6 @@
 {% comment %} :::: END FACETS :::: {% endcomment%}
 
 <!-- THE GALLERY -->
-    
 <div class="wax-gallery-container full-width" id="wax-gallery-{{ include.value | slugify }}-container" >
   <div class="wax-inline-container">
       <div class="wax-gallery" id="wax-gallery-{{ include.value | slugify }}">
@@ -123,7 +143,10 @@
                   {% assign split_values = {{item_value}} | split: separator %}                 
                   {% for split_value in split_values %}
                     {% assign split_slug_value = split_value | slugify %}
-                    {% capture temp_facet_values %}{{ temp_facet_values | append: split_slug_value }}{% unless split_value == split_values.last %}|{% endunless %}{% endcapture %}
+                    {% comment %} -- Note: intentional space in the "unless" block -- {% endcomment %}
+                    {% capture temp_facet_values %}
+                      {{ temp_facet_values | append: split_slug_value }}{% unless split_value == split_values.last %} {% endunless %}
+                    {% endcapture %}
                   {% endfor %}
                 {% else %}
                   {% assign slug_value = item_value | join " " | slugify %}
@@ -132,13 +155,11 @@
                 {% assign facetArray = temp_facet_values | replace: separator, " " | split: " " %} 
                 {% assign newClasses = newClasses | concat: facetArray %}           
             {% endfor %}
-            
           {% endif %}
 
-          <div class="gallery-item-facets {{  newClasses | join: ' ' }}  col-xl-{{min_column_width}} p-1">
+          <div class="gallery-item-facets {{ newClasses | join: ' ' }} col-xl-{{min_column_width}} p-1">
             <a href="{{ item.url | relative_url }}">
               <div class="card thumbnail-card h-100">
-                <!-- Item: {{ item.pid }} -->
                 <img
                   class="d-block card-img-top gallery-thumb w-100 mh-100"
                   src="{{ item.thumbnail | relative_url }}"
