Add keywords to search index, make searchable. Adjust results display

--- a/_sass/_facets.scss
+++ b/_sass/_facets.scss
@@ -151,7 +151,7 @@ a.action-button:hover {
         img {
           float: left;
         }
-        p {
+        p, div {
           margin: 0 !important;
           padding: 0;
           .title {
