general changes to color

--- a/_layouts/facet_page_layout.html
+++ b/_layouts/facet_page_layout.html
@@ -71,7 +71,7 @@ Generate the list of nav links to all of our Keywords
           value=page.Keyword
           num_column=3
           separator=','
-          display_fields="lhc_source,lhc_doc_origin,lhc_filing_date"
+          display_fields="lhc_source,archive_doc_location,lhc_filing_date"
       %}
     {% endif %}
   </section>
