--- a/_layouts/keywords_item.html
+++ b/_layouts/keywords_item.html
@@ -5,8 +5,8 @@ pagination: true
 meta:
   - label: 'Date'
     value: page.lhc_filing_date
-  - label: 'Origin'
-    value: page.lhc_doc_origin
+  - label: 'Location'
+    value: page.archive_doc_location
   - label: 'Language'
     value: page.language
   - label: 'Archive'
