--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -37,12 +37,12 @@ $heading-font: "Open Sans Light", "Verdana", "sans-serif", "bold";
 
 /* Colors */
 
-$dark-background: #005442;
-$light-text: #deb76a;
-$light-link: #f1e2d0;
-$light-link-hover: #bae5ce;
-$medium-background: #83406f;
-$light-background: #f5d877;
+$dark-background: #2e1110;
+$light-text: #f2ebec;
+$light-link: #f3f0e9;
+$light-link-hover: #875f59;
+$medium-background: #94979a;
+$light-background: #f6eee0;
 $dark-text: #000000;
 $code: #000000;
 $muted-text: #777777;
